--- a/9.html
+++ b/9.html
@@ -245,7 +245,8 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 <a href="https://hd.ijycnd.com/play/PdRJMVKd/index.m3u8">第14集</a></li><li>
 <a href="https://hd.ijycnd.com/play/PdRJ8Xzd/index.m3u8">第15集</a></li><li>
 <a href="https://hd.ijycnd.com/play/Qe1NVM0a/index.m3u8">第16集</a></li><li>
-
+<a href="https://hd.ijycnd.com/play/9avv9wVa/index.m3u8">第17集</a></li><li>
+<a href="https://hd.ijycnd.com/play/6dBmRvxb/index.m3u8">第18集</a></li><li>
 
 
 	</summary></details>
