--- a/0.html
+++ b/0.html
@@ -47,9 +47,9 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 						</div>
 
 <br>  <span id="target"></span>
-<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
+<div class="icopy_1" data-clipboard-text="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=T1fLn9A5sMf95ckaHDYDj4QIESVxLPN9&authKey=nW3OMNbCHdTolRPairfQP5iB32RZ5iTckvadxO5pn9gdl5Odt3j6euXpFA%2B%2FV1RT&noverify=0&group_code=609286349"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
-前面是文字居中 --><a href="#小程序://美团优选明日达超市真的真的省/5lEuvWYM6lgKlaK">★★★中秋福利6元五仁6月饼★★★用微信打开本页再点击</a></div></div> 
+前面是文字居中 --><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=T1fLn9A5sMf95ckaHDYDj4QIESVxLPN9&authKey=nW3OMNbCHdTolRPairfQP5iB32RZ5iTckvadxO5pn9gdl5Odt3j6euXpFA%2B%2FV1RT&noverify=0&group_code=609286349">★★★QQ电影群★★★</a></div></div> 
 							</div>  </div> </div> 
 						</div>
 
