--- a/10.html
+++ b/10.html
@@ -222,21 +222,20 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 </head>
 <body>
   <details><summary>
-<img src="https://image.jinyingimage.com/cover/32161d8c28e20d7c92e4bc602c7ef5a8.jpg" width="150" height="150"<span>田耕纪</span>
+<img src="https://image.jinyingimage.com/cover/32161d8c28e20d7c92e4bc602c7ef5a8.jpg" width="150" height="150"<span>仿生人间</span>
   </summary>
-<a href="https://hd.ijycnd.com/play/7axx2Kra/index.m3u8">第1集</a></li><li>
-<a href="https://hd.ijycnd.com/play/oeEp03kd/index.m3u8">第2集</a></li><li>
-<a href="https://hd.ijycnd.com/play/negEnm6b/index.m3u8">第3集</a></li><li>
-<a href="https://hd.ijycnd.com/play/negEnmYb/index.m3u8">第4集</a></li><li>
-<a href="https://hd.ijycnd.com/play/mbkL7lxd/index.m3u8">第5集</a></li><li>
-<a href="https://hd.ijycnd.com/play/zbqnZr3d/index.m3u8">第6集</a></li><li>
-<a href="https://hd.ijycnd.com/play/xe70Xwwa/index.m3u8">第7集</a></li><li>
-<a href="https://hd.ijycnd.com/play/NbW08N4d/index.m3u8">第8集</a></li><li>
-<a href="https://hd.ijycnd.com/play/0dNB8Amd/index.m3u8">第9集</a></li><li>
-<a href="https://hd.ijycnd.com/play/oeEpPomd/index.m3u8">第10集</a></li><li>
-<a href="https://hd.ijycnd.com/play/6dBm8YNb/index.m3u8">第11集</a></li><li>
-<a href="https://hd.ijycnd.com/play/9avvYvXa/index.m3u8">第12集</a></li><li>
-
+<a href="https://v.cdnlz1.com/20231018/22918_ebc448ca/index.m3u8">第1集</a></li><li>
+<a href="https://v.cdnlz1.com/20231018/22917_2ed853a7/index.m3u8">第2集</a></li><li>
+<a href="https://v.cdnlz1.com/20231018/22916_b85dad69/index.m3u8">第3集</a></li><li>
+<a href="https://v.cdnlz1.com/20231018/22915_5118c9b4/index.m3u8">第4集</a></li><li>
+<a href="https://v.cdnlz12.com/20231019/10628_5a620dde/index.m3u8">第5集</a></li><li>
+<a href="https://v.cdnlz12.com/20231019/10627_b7d0d445/index.m3u8">第6集</a></li><li>
+<a href="https://v.cdnlz12.com/20231019/10626_bd3f1311/index.m3u8">第7集</a></li><li>
+<a href="https://v.cdnlz1.com/20231020/22998_02ab3f31/index.m3u8">第8集</a></li><li>
+<a href="https://v.cdnlz1.com/20231020/22997_e182fdce/index.m3u8">第9集</a></li><li>
+<a href="https://v.cdnlz1.com/20231020/22996_166dc100/index.m3u8">第10集</a></li><li>
+<a href="https://v.cdnlz1.com/20231021/23011_889035dc/index.m3u8">第11集</a></li><li>
+<a href="https://v.cdnlz1.com/20231021/23010_9d807ac5/index.m3u8">第12集</a></li><li>
 
 
 
