--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 							</div>  </div> </div> 
 						</div>
 
-<br>  <span id="target"></span>
-<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
-前面是文字居中 --><a href="https://98tv.github.io/1.png">★★★支付宝每天送红包★★★</a></div></div> 
 <br>  <span id="target"></span>
-<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
-
-前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手红包点击领取★★★</a></div></div> </br>
+<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" >
+<!-- 前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手红包点击领取★★★</a></div></div> </br>
+</br>
+<br>  <span id="target"></span>
+<div class="icopy_1" data-clipboard-text="https://ktv98.gitee.io/music.html"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" >
+<!-- 前面是文字居中 --><a href="https://ktv98.gitee.io/music.html">★★★怀旧经典音乐🎵★★★</a></div></div> </br>
 </br>
 </summary></details>
     </script>
