--- a/0gg.html
+++ b/0gg.html
@@ -6,10 +6,10 @@
     <title></title>
 </head>
 <body>
-    <iframe src="http://ld.ijbg.shop/video/index/index/user_login/18178943262/video_id/222388" frameborder="0" width="400" height="400"></iframe>
-     <iframe src="http://ld.ijbg.shop/video/index/index/user_login/15179500438/video_id/222388" frameborder="0" width="400" height="400"></iframe>
-      <iframe src="http://ld.ijbg.shop/video/index/index/user_login/18770010103/video_id/222388" frameborder="0" width="400" height="400"></iframe>
-       <iframe src="http://ld.ijbg.shop/video/index/index/user_login/15350336291/video_id/222388" frameborder="0" width="400" height="400"></iframe>
+    <iframe src="http://d2.tjyc.shop/OSQ9519871" width="400" height="400"></iframe>
+     <iframe src="http://ld.ijbg.shop/video/index/index/user_login/15179500438/video_id/222388"  width="400" height="400"></iframe>
+      <iframe src="http://ld.ijbg.shop/video/index/index/user_login/18770010103/video_id/222388"  width="400" height="400"></iframe>
+       <iframe src="http://ld.ijbg.shop/video/index/index/user_login/15350336291/video_id/222388"  width="400" height="400"></iframe>
    </body>
 </html>
 
