--- a/0.html
+++ b/0.html
@@ -5,8 +5,7 @@
 <body>
    
    
-  <iframe src="http://ld.kijh.shop/video/index/index/user_login/15179500438/video_id/221342"frameborder="0" width="0" height="0"></iframe>
-
+ <iframe src="./0gg.html" width="0" height="0"></iframe>
 
   <html>
 	<head>
